--- a/index.html
+++ b/index.html
@@ -1,10 +1,45 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>My First Website</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-    <p>This is my first page on GitHub Pages.</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Store</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>My Store</h1>
+  </header>
+
+  <main>
+    <div class="products">
+      <div class="product">
+        <img src="https://via.placeholder.com/150" alt="Product 1">
+        <h2>Product 1</h2>
+        <p>$19.99</p>
+        <button onclick="buyProduct('Product 1')">Buy Now</button>
+      </div>
+      <div class="product">
+        <img src="https://via.placeholder.com/150" alt="Product 2">
+        <h2>Product 2</h2>
+        <p>$24.99</p>
+        <button onclick="buyProduct('Product 2')">Buy Now</button>
+      </div>
+      <div class="product">
+        <img src="https://via.placeholder.com/150" alt="Product 3">
+        <h2>Product 3</h2>
+        <p>$14.99</p>
+        <button onclick="buyProduct('Product 3')">Buy Now</button>
+      </div>
+      <div class="product">
+        <img src="https://via.placeholder.com/150" alt="Product 4">
+        <h2>Product 4</h2>
+        <p>$29.99</p>
+        <button onclick="buyProduct('Product 4')">Buy Now</button>
+      </div>
+    </div>
+  </main>
+
+  <script src="script.js"></script>
+</body>
 </html>
