--- a/index.html
+++ b/index.html
@@ -3,42 +3,234 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Store</title>
+  <title>Elegant Store</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>My Store</h1>
+    <h1>Elegant Store</h1>
+    <p>Luxury dropshipping products</p>
   </header>
 
   <main>
     <div class="products">
+      <!-- 30 Products -->
+      <!-- Product 1 -->
       <div class="product">
-        <img src="https://via.placeholder.com/150" alt="Product 1">
+        <img src="https://via.placeholder.com/200" alt="Product 1">
         <h2>Product 1</h2>
         <p>$19.99</p>
         <button onclick="buyProduct('Product 1')">Buy Now</button>
       </div>
+      <!-- Product 2 -->
       <div class="product">
-        <img src="https://via.placeholder.com/150" alt="Product 2">
+        <img src="https://via.placeholder.com/200" alt="Product 2">
         <h2>Product 2</h2>
         <p>$24.99</p>
         <button onclick="buyProduct('Product 2')">Buy Now</button>
       </div>
+      <!-- Product 3 -->
       <div class="product">
-        <img src="https://via.placeholder.com/150" alt="Product 3">
+        <img src="https://via.placeholder.com/200" alt="Product 3">
         <h2>Product 3</h2>
         <p>$14.99</p>
         <button onclick="buyProduct('Product 3')">Buy Now</button>
       </div>
+      <!-- Product 4 -->
       <div class="product">
-        <img src="https://via.placeholder.com/150" alt="Product 4">
+        <img src="https://via.placeholder.com/200" alt="Product 4">
         <h2>Product 4</h2>
         <p>$29.99</p>
         <button onclick="buyProduct('Product 4')">Buy Now</button>
       </div>
+      <!-- Product 5 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 5">
+        <h2>Product 5</h2>
+        <p>$34.99</p>
+        <button onclick="buyProduct('Product 5')">Buy Now</button>
+      </div>
+      <!-- Product 6 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 6">
+        <h2>Product 6</h2>
+        <p>$21.99</p>
+        <button onclick="buyProduct('Product 6')">Buy Now</button>
+      </div>
+      <!-- Product 7 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 7">
+        <h2>Product 7</h2>
+        <p>$27.99</p>
+        <button onclick="buyProduct('Product 7')">Buy Now</button>
+      </div>
+      <!-- Product 8 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 8">
+        <h2>Product 8</h2>
+        <p>$18.99</p>
+        <button onclick="buyProduct('Product 8')">Buy Now</button>
+      </div>
+      <!-- Product 9 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 9">
+        <h2>Product 9</h2>
+        <p>$22.99</p>
+        <button onclick="buyProduct('Product 9')">Buy Now</button>
+      </div>
+      <!-- Product 10 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 10">
+        <h2>Product 10</h2>
+        <p>$19.49</p>
+        <button onclick="buyProduct('Product 10')">Buy Now</button>
+      </div>
+      <!-- Product 11 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 11">
+        <h2>Product 11</h2>
+        <p>$25.99</p>
+        <button onclick="buyProduct('Product 11')">Buy Now</button>
+      </div>
+      <!-- Product 12 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 12">
+        <h2>Product 12</h2>
+        <p>$30.99</p>
+        <button onclick="buyProduct('Product 12')">Buy Now</button>
+      </div>
+      <!-- Product 13 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 13">
+        <h2>Product 13</h2>
+        <p>$16.99</p>
+        <button onclick="buyProduct('Product 13')">Buy Now</button>
+      </div>
+      <!-- Product 14 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 14">
+        <h2>Product 14</h2>
+        <p>$23.49</p>
+        <button onclick="buyProduct('Product 14')">Buy Now</button>
+      </div>
+      <!-- Product 15 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 15">
+        <h2>Product 15</h2>
+        <p>$28.99</p>
+        <button onclick="buyProduct('Product 15')">Buy Now</button>
+      </div>
+      <!-- Product 16 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 16">
+        <h2>Product 16</h2>
+        <p>$31.99</p>
+        <button onclick="buyProduct('Product 16')">Buy Now</button>
+      </div>
+      <!-- Product 17 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 17">
+        <h2>Product 17</h2>
+        <p>$20.99</p>
+        <button onclick="buyProduct('Product 17')">Buy Now</button>
+      </div>
+      <!-- Product 18 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 18">
+        <h2>Product 18</h2>
+        <p>$26.49</p>
+        <button onclick="buyProduct('Product 18')">Buy Now</button>
+      </div>
+      <!-- Product 19 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 19">
+        <h2>Product 19</h2>
+        <p>$33.99</p>
+        <button onclick="buyProduct('Product 19')">Buy Now</button>
+      </div>
+      <!-- Product 20 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 20">
+        <h2>Product 20</h2>
+        <p>$17.99</p>
+        <button onclick="buyProduct('Product 20')">Buy Now</button>
+      </div>
+      <!-- Product 21 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 21">
+        <h2>Product 21</h2>
+        <p>$21.49</p>
+        <button onclick="buyProduct('Product 21')">Buy Now</button>
+      </div>
+      <!-- Product 22 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 22">
+        <h2>Product 22</h2>
+        <p>$24.99</p>
+        <button onclick="buyProduct('Product 22')">Buy Now</button>
+      </div>
+      <!-- Product 23 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 23">
+        <h2>Product 23</h2>
+        <p>$18.49</p>
+        <button onclick="buyProduct('Product 23')">Buy Now</button>
+      </div>
+      <!-- Product 24 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 24">
+        <h2>Product 24</h2>
+        <p>$29.99</p>
+        <button onclick="buyProduct('Product 24')">Buy Now</button>
+      </div>
+      <!-- Product 25 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 25">
+        <h2>Product 25</h2>
+        <p>$27.49</p>
+        <button onclick="buyProduct('Product 25')">Buy Now</button>
+      </div>
+      <!-- Product 26 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 26">
+        <h2>Product 26</h2>
+        <p>$23.99</p>
+        <button onclick="buyProduct('Product 26')">Buy Now</button>
+      </div>
+      <!-- Product 27 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 27">
+        <h2>Product 27</h2>
+        <p>$32.99</p>
+        <button onclick="buyProduct('Product 27')">Buy Now</button>
+      </div>
+      <!-- Product 28 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 28">
+        <h2>Product 28</h2>
+        <p>$19.99</p>
+        <button onclick="buyProduct('Product 28')">Buy Now</button>
+      </div>
+      <!-- Product 29 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 29">
+        <h2>Product 29</h2>
+        <p>$26.99</p>
+        <button onclick="buyProduct('Product 29')">Buy Now</button>
+      </div>
+      <!-- Product 30 -->
+      <div class="product">
+        <img src="https://via.placeholder.com/200" alt="Product 30">
+        <h2>Product 30</h2>
+        <p>$34.49</p>
+        <button onclick="buyProduct('Product 30')">Buy Now</button>
+      </div>
     </div>
   </main>
+
+  <footer>
+    <p>&copy; 2025 Elegant Store. All rights reserved.</p>
+  </footer>
 
   <script src="script.js"></script>
 </body>
